@@ -19,6 +19,7 @@ Jump Start Changelog
 * Improvement: Better mobile fallback for parallax background images.
 * Improvement: Redesign of Team Member element.
 * Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
+* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
 * Improvement: More default spacing between elements in custom layouts.
 * Updated: FontAwesome to 4.5.
 * Updated: FlexSlider to 2.6.
